# Jamboo

./: .env_sample  .gitignore  README.md  db.sqlite3  manage.py  migrate  pyproject.toml  requirements.txt  rm  run  setup.py
_docs/: .~lock.Documentação Software Monitoramento.docx#  Documentação Software Monitoramento.docx  FINAL DATA  PROBLEMA.txt  a_fazer.txt  acentos.txt  checklist.docx  cores.txt  dashboardlink.txt  errorrrrr.txt  erros.txt  falta.txt  fluxo.txt  infos.txt  niveis.txt  para_fazer.txt  rotas.txt
account/: forms.py  models.py  urls.py  views.py
administracao/: admin.py  forms.py  models.py  urls.py  views.py
administracao/static/adminsitracao/: adminsitracao.css
administrador/: forms.py  models.py  urls.py  views.py
arquivo/: models.py
arquivos/: admin.py  forms.py  funcoes.py  models.py  urls.py  views.py
docs/: mapa_menta_jamboo.minder  server_teste.txt
editor/: urls.py  views.py
empresa/: admin.py  forms.py  funcoes.py  models.py  urls.py  views.py
index/: auxiliar.py  forms.py  funcoes.py  mensagens.py  urls.py  verificacoes.py  views.py
index/templatetags/: custom_filters.py
jamboo/: .env  asgi.py  settings.py  urls.py  wsgi.py
mensagem/: urls.py  views.py
templates/: base.html  paginacao.html
templates/account/public/: configuracoes.html  home.html  login.html  (+1 more)
templates/adm/: base.html
templates/administracao/: lateral-esquerda.html
templates/arquivos/: base.html
templates/mensagem/: base.html
usuario/: models.py
usuarios/: forms.py  models.py  urls.py  views.py
usuarios/templates/: base.html
(+54 files in other folders)
