[tool.poetry]
name = "repl_nix_ProjetoJamboo"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.5"
django-autoslug = "^1.9.8"
django-bootstrap5 = "^22.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
